[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/joytoggle.gd" type="Script" id=1]

[node name="Node" type="Node"]

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 393.0
margin/top = 130.0
margin/right = 517.0
margin/bottom = 185.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="CheckButton" type="CheckButton" parent="Button"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = 105.0
margin/right = 92.0
margin/bottom = 127.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Joystick"
flat = false
align = 0
script/script = ExtResource( 1 )

[connection signal="button_down" from="Button" to="Button/CheckButton" method="_on_Button_button_down"]

[connection signal="released" from="Button" to="Button/CheckButton" method="_on_Button_released"]

[connection signal="toggled" from="Button/CheckButton" to="Button/CheckButton" method="_on_CheckButton_toggled"]


